<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:flow_horizontalBias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_customer_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/actProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:completionThreshold="2"
                android:hint="@string/select_province"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilCustomerName" />

            <RadioGroup
                android:id="@+id/rgComputerType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actProvince">

                <RadioButton
                    android:id="@+id/rbDesktop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desktop" />

                <RadioButton
                    android:id="@+id/rbLaptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laptop" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerBrand"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_background"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgComputerType" />

            <CheckBox
                android:id="@+id/cbSsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/ssd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerBrand" />

            <CheckBox
                android:id="@+id/cbPrinter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/printer"
                app:layout_constraintStart_toEndOf="@+id/cbSsd"
                app:layout_constraintTop_toBottomOf="@+id/spinnerBrand" />

            <RadioGroup
                android:id="@+id/rgPeripherals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbPrinter">

                <RadioButton
                    android:id="@+id/rbCoolingMat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cooling_mat"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rbUsbCHub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usb_c_hub"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rbLaptopStand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laptop_stand"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rbNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rbWebcam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/webcam"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rbExternalHardDrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/external_hard_drive"
                    android:visibility="gone" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvInvoice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="#E8E8E8"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:flow_horizontalBias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgPeripherals"
                tools:text="Cost = $500.00" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInvoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/calculate_invoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>